cli/tests/snapshot/inputs/errors/interpolation_non_stringable.ncl
# capture = 'stderr'
# command = ['eval']

let data = {foo = 1, bar = "string"} in
"hello, I am %{data}"
